Source/WebCore/rendering/RenderBoxModelObject.h
@@ -227,6 +227,8 @@ protected:
         IntSize m_tileSize;
     };
 
+    LayoutPoint offsetTopLeft(const LayoutPoint&) const;
+
     void calculateBackgroundImageGeometry(const FillLayer*, const LayoutRect& paintRect, BackgroundImageGeometry&);
     void getBorderEdgeInfo(class BorderEdge[], const RenderStyle*, bool includeLogicalLeftEdge = true, bool includeLogicalRightEdge = true) const;
     bool borderObscuresBackgroundEdge(const FloatSize& contextScale) const;
